[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoclaw"
version = "0.1.0"
description = "Official Python SDK for the MemoClaw memory API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MemoClaw", email = "hello@memoclaw.com" },
]
keywords = ["memoclaw", "memory", "ai", "agents", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "eth-account>=0.13",
]

[project.optional-dependencies]
x402 = ["x402[httpx,evm]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://memoclaw.com"
Documentation = "https://memoclaw.com/docs"
Repository = "https://github.com/memoclaw/memoclaw-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/memoclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
